--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "HAI916I/tp/tp3/TD1"]
 	path = HAI916I/tp/tp3/TD1
 	url = https://github.com/DocAmaroo/TD1.git
+[submodule "HAI916I/tp/tp4/code2vec"]
+	path = HAI916I/tp/tp4/code2vec
+	url = https://github.com/tech-srl/code2vec.git
