--- a/HAI912I/tp/tp2/weather/pubspec.yaml
+++ b/HAI912I/tp/tp2/weather/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
   http: ^0.13.4
+  bloc: ^7.2.1
+  flutter_bloc: ^7.3.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
