--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "HAI912I/tp/tp2/WeatherApp"]
 	path = HAI912I/tp/tp2/WeatherApp
 	url = git@github.com:DocAmaroo/WeatherApp.git
+[submodule "HAI912I/tp/tp2/QuizzApp"]
+        url = git@github.com:DocAmaroo/QuizzApp.git
+        active = true
